--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <meta http-equiv="refresh" content="0; url=https://boogled.netlify.app/boogle.html" />
   </head>
 <body cz-shortcut-listen="true">
-  <p><a href="https://boogled.netlify.app/boogle.html">Redirect</a></p>
+  <p><a href="https://boogleminus.netlify.app/boogle.html">Redirect</a></p>
 </body>
 </html>
