--- a/boogle.html
+++ b/boogle.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boogle</title>
+    <title>Boogle Minus</title>
     <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="./bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="./bootstrap/bootswatch.less" rel="stylesheet/less">
     <link href="./bootstrap/variables.less" rel="stylesheet/less">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/less@4.1.1"></script> 
     <style>
 body {
 padding-bottom:40px;
@@ -269,6 +270,7 @@ line-height:1.5
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="https://boogled.netlify.app/boogleminus/angryboogle">Angry Boogle</a></li>
                 <li><a href="https://boogled.netlify.app/boogleminus/booglepop">Boogle Pop</a></li>
+                <li><a href="https://boogled.netlify.app/boogle.html">Back To Boogle</a></li>
               </ul>
             </div><!--/.nav-collapse -->
           </div><!-- /.navbar-inner -->
@@ -289,7 +291,7 @@ line-height:1.5
   
   <div class="container marketing">
     <center>
-      <h1 style="font-size: 85px;"> Welcome To Boogle Minus!!1!1 <br><span style="font-size: 20px;"> You Must Pay &#36;0.05 A Month</span></h1>
+      <h1 style="font-size: 70px;"> Welcome To Boogle Minus!!1!1 <br><span style="font-size: 20px;"> You Must Pay &#36;0.05 A Month</span></h1>
   <p>To have access to Boogle's 100 Percent Original, Fun, Adobe Flash Games!</p>
   <br>
   <br>
