--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirect Pitstop!</title>
-    <meta http-equiv="refresh" content="0; url=https://boogled.netlify.app/boogle.html" />
+    <meta http-equiv="refresh" content="0; url=https://boogleminus.netlify.app/boogle.html" />
   </head>
 <body cz-shortcut-listen="true">
   <p><a href="https://boogleminus.netlify.app/boogle.html">Redirect</a></p>
