--- a/boogle.html
+++ b/boogle.html
@@ -8,7 +8,7 @@
     <link href="./bootstrap/bootswatch.less" rel="stylesheet/less">
     <link href="./bootstrap/variables.less" rel="stylesheet/less">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/4.2.0/less.min.js"></script> 
+    <script src="bootstrap/js/less.min.js"></script> 
     <style>
 body {
 padding-bottom:40px;
