--- a/boogle.html
+++ b/boogle.html
@@ -3,12 +3,13 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boogle Minus</title>
+    <script src="https://cdn.jsdelivr.net/npm/less"></script>  <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="./bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="./bootstrap/bootswatch.less" rel="stylesheet/less">
     <link href="./bootstrap/variables.less" rel="stylesheet/less">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <script src="bootstrap/js/less.min.js"></script> 
+    
     <style>
 body {
 padding-bottom:40px;
@@ -309,7 +310,6 @@ line-height:1.5
   </div><!-- /.container -->
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="./bootstrap/js/bootstrap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/less" ></script>
 <script>
   
 </script>
