--- a/boogle.html
+++ b/boogle.html
@@ -292,7 +292,7 @@ line-height:1.5
   
   <div class="container marketing">
     <center>
-      <h1 style="font-size: 70px;"> Welcome To Boogle Minus!!1!1 <br><span style="font-size: 20px;"> You Must Pay &#36;0.05 A Month</span></h1>
+      <h1 style="font-size: 70px;"> Welcome To Boogle Minus!!1!1 <br></h1><h2> You Must Pay &#36;0.05 A Month</h2>
   <p>To have access to Boogle's 100 Percent Original, Fun, Adobe Flash Games!</p>
   <br>
   <br>
