--- a/boogle.html
+++ b/boogle.html
@@ -292,7 +292,7 @@ line-height:1.5
   
   <div class="container marketing">
     <center>
-      <h1 style="font-size: 70px;"> Welcome To Boogle Minus!!1!1 </h1><br><br><h2>You must pay &#36;0.05 <em>A Month</em></h2>
+      <h1 style="font-size: 70px;"> Welcome To Boogle Minus!!1!1 </h1><br><h2>You must pay &#36;0.05 <em>A Month</em></h2>
   <h3>to have access to Boogle's 100 Percent Original, Fun, Adobe Flash Games!</h3>
   <br>
   <p>Mobile devices are not supported at the moment.</p>
@@ -303,7 +303,7 @@ line-height:1.5
       <img alt="300x200" style="width: 300px; height: 200px;" src="./assets/img/pop.png">
       <div class="caption">
         <h3>Boogle Pop</h3>
-        <p>Pop the <em>Dangerous</em> Ballons, and earn points.</p>
+        <p style="color: #fff;">Pop the <em>Dangerous</em> Ballons, and earn points.</p>
         <p><a href="https://boogled.netlify.app/boogleminus/booglepop" class="btn btn-primary">Play Now!</a></p>
       </div>
     </div>
@@ -311,7 +311,7 @@ line-height:1.5
       <img alt="300x200" style="width: 300px; height: 200px;" src="./assets/img/angry.png">
       <div class="caption">
         <h3>Angry Boogle</h3>
-        <p>This game is not a copy of another game. This is an original Adobe Flash Game</p>
+        <p style="color: #fff;">This game is not a copy of another game. This is an original Adobe Flash Game</p>
         <p><a href="https://boogled.netlify.app/boogleminus/angryboogle" class="btn btn-primary">Play Now!</a></p>
       </div>
     </div>
