--- a/boogle.html
+++ b/boogle.html
@@ -265,7 +265,7 @@ line-height:1.5
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="#">Boogle</a>
+            <a class="brand" href="#">Boogle Minus</a>
             <div class="nav-collapse collapse">
               <ul class="nav">
                 <li class="active"><a href="#">Home</a></li>
@@ -300,6 +300,16 @@ line-height:1.5
   <br>
   <div class="container-fluid">
     <div class="thumbnail">
+      <img alt="300x200" style="width: 300px; height: 200px;" src="./assets/img/ball.png">
+      <div class="caption">
+        <h3>Boogle Ball</h3>
+        <p style="color: #fff;">Basketball Simulator 2024, be sure to check the help button for the controls</p>
+        <p><a href="https://boogled.netlify.app/boogleminus/ball" class="btn btn-primary">Play Now!</a></p>
+      </div>
+    </div>
+  </div>
+  <br>
+    <div class="thumbnail">
       <img alt="300x200" style="width: 300px; height: 200px;" src="./assets/img/pop.png">
       <div class="caption">
         <h3>Boogle Pop</h3>
@@ -311,12 +321,13 @@ line-height:1.5
       <img alt="300x200" style="width: 300px; height: 200px;" src="./assets/img/angry.png">
       <div class="caption">
         <h3>Angry Boogle</h3>
-        <p style="color: #fff;">This game is not a copy of another game. This is an original Adobe Flash Game</p>
+        <p style="color: #fff;">This game is not a copy of another game. This is an original Adobe Flash Game (Press the spacebar to shoot balls)</p>
         <p><a href="https://boogled.netlify.app/boogleminus/angryboogle" class="btn btn-primary">Play Now!</a></p>
       </div>
     </div>
   </div>
   <br>
+
       <br>
     </center>
   
