--- a/boogle.html
+++ b/boogle.html
@@ -313,7 +313,7 @@ line-height:1.5
       <img alt="300x200" style="width: 300px; height: 200px;" src="./assets/img/pop.png">
       <div class="caption">
         <h3>Boogle Pop</h3>
-        <p style="color: #fff;">Pop the <em>Dangerous</em> Ballons, and earn points.</p>
+        <p style="color: #fff;">Pop the <em>Dangerous</em> Ballons, and earn points. (Press the spacebar to shoot balls</p>
         <p><a href="https://boogled.netlify.app/boogleminus/booglepop" class="btn btn-primary">Play Now!</a></p>
       </div>
     </div>
@@ -321,7 +321,7 @@ line-height:1.5
       <img alt="300x200" style="width: 300px; height: 200px;" src="./assets/img/angry.png">
       <div class="caption">
         <h3>Angry Boogle</h3>
-        <p style="color: #fff;">This game is not a copy of another game. This is an original Adobe Flash Game (Press the spacebar to shoot balls)</p>
+        <p style="color: #fff;">This game is not a copy of another game. This is an original Adobe Flash Game)</p>
         <p><a href="https://boogled.netlify.app/boogleminus/angryboogle" class="btn btn-primary">Play Now!</a></p>
       </div>
     </div>
